# multirobil

./: .gitignore  README.md
mobil/: CMakeLists.txt  HowToRun  package.xml
mobil/data/: object_4x4
mobil/include/mobil/: Bobcat.h  UAV.h  Utils.h
mobil/launch/: mobil.launch  mobil_config.rviz
mobil/meshes/: 40x40CubeModelCenterOnOrigin.dae
mobil/src/: Bobcat.cpp  MobilTAO.cpp  UAV.cpp  shared_coordinates_node.cpp  statistics.cpp
mobil/urdf/: cube_Robot.urdf
mobil/worlds/: empty.world
rgi/rgi_control/: CMakeLists.txt  package.xml
rgi/rgi_control/config/: joint_position_control.yaml
rgi/rgi_control/launch/: rgi_control.launch
rgi/rgi_control/scripts/: joy_teleop.py
rgi/rgi_description/: CMakeLists.txt  package.xml  urdf.rviz
rgi/rgi_description/launch/: rgi_rviz.launch
rgi/rgi_description/urdf/: materials.xacro  ptz.xacro  rgi.xacro  wheel.xacro
rgi/rgi_gazebo/: CMakeLists.txt  package.xml
rgi/rgi_gazebo/launch/: gazebo.rviz  rgi_gazebo.launch  rgi_gazebo_full_monti.launch  rgi_gazebo_rviz.launch  rgi_rqt_perspc_1.perspective
rgi/rgi_gazebo/scripts/: setupRgiEnv.sh
rgi/rgi_gazebo/worlds/: AndCoke.world
